[package]
name = "korean-lunar-calendar"
version = "1.0.0"

description = "Convert korean lunar date to gregorian date"
authors = ["jangjunha <hi@jangjunha.me>"]
homepage = "https://github.com/jangjunha/korean-lunar-calendar/"
repository = "https://github.com/jangjunha/korean-lunar-calendar/"
readme = "README.md"

edition = "2021"
license = "MIT"
exclude = ["/.github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "~0"
lazy_static = "~1"
